# spatial_engine

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  bootstrap.sh  justfile  progress.txt  pytest.ini  require.md  requirements-dev.txt  requirements.txt
.ci/: vst3sdk_sha.txt  (+2 more)
core/: CMakeLists.txt
core/src/ambi/: AllRADDecoder.cpp  AllRADDecoder.hpp  AllRADTDesigns.cpp  AllRADTDesigns.hpp  AmbiDecoder.cpp  AmbiDecoder.h  AmbisonicEncoder.cpp  AmbisonicEncoder.h  EPADDecoder.cpp  EPADDecoder.hpp  InPhaseDecoder.cpp  InPhaseDecoder.hpp  MaxREDecoder.cpp  MaxREDecoder.hpp
core/src/audio_io/: AudioBackend.cpp  AudioBackend.h  AudioCallback.h  DanteBackend.cpp  DanteBackend.h  NullBackend.cpp  NullBackend.h  SharedRingBackend.cpp  SharedRingBackend.h
core/src/coords/: Coords.h  CoordsTests.h
core/src/core/: Constants.h  SpatialEngine.cpp  SpatialEngine.h
core/src/dsp/: ChannelLimiter.h  DelayLine.h  DistanceGain.h  DistanceLPF.h  EQ4Band.h  GainRamp.h  LogSweep.h  PerObjectChain.h  PinkNoise.h  PropagationDelay.h
core/src/geometry/: LayoutLibrary.cpp  LayoutLibrary.h  LayoutLoader.cpp  LayoutLoader.h  SpeakerLayout.cpp  SpeakerLayout.h
core/src/hrtf/: HrtfCatalog.cpp  HrtfCatalog.h  HrtfLookup.cpp  HrtfLookup.h  KdTree3D.cpp  KdTree3D.h  OlaConvolver.cpp  OlaConvolver.h  SofaBinReader.cpp  SofaBinReader.h
core/src/input/: AudioInput.h  FileInput.cpp  FileInput.h  LiveMicInput.cpp  LiveMicInput.h  SynthInput.cpp  SynthInput.h
core/src/ipc/: AdmOscConstants.h  Command.h  CommandDecoder.cpp  CommandDecoder.h  EchoSubscriber.cpp  EchoSubscriber.h  ExternalControl.h  HeartbeatMonitor.cpp  HeartbeatMonitor.h  HeartbeatPublisher.cpp  HeartbeatPublisher.h  OSCBackend.cpp  OSCBackend.h  ProtocolVersion.cpp  ProtocolVersion.h  SceneController.cpp  SceneController.h  SceneSnapshot.cpp  SceneSnapshot.h  StateModel.cpp  StateModel.h  VST3ControlStub.cpp  VST3ControlStub.h
core/src/output_backend/: BinauralMonitor.cpp  BinauralMonitor.h
core/src/render/: AlgorithmAnalyticReference.cpp  AlgorithmAnalyticReference.h  AmbisonicRenderer.cpp  AmbisonicRenderer.h  DBAPRenderer.cpp  DBAPRenderer.h  LayoutCompatibilityChecker.cpp  LayoutCompatibilityChecker.h  RenderingAlgorithm.h  VAPRenderer.cpp  VAPRenderer.h  VBAPRenderer.cpp  VBAPRenderer.h  WFSRenderer.cpp  WFSRenderer.h
core/src/reverb/: FdnReverb.cpp  FdnReverb.h  IRConvReverb.cpp  IRConvReverb.h  IRConvolutionStub.cpp  IRConvolutionStub.h  ReverbEngine.cpp  ReverbEngine.h
core/src/scene/: CueEngine.cpp  CueEngine.h  CueList.cpp  CueList.h  SceneCrossfade.cpp  SceneCrossfade.h
core/src/sync/: LTCDecoder.cpp  LTCDecoder.h  LtcChase.cpp  LtcChase.h
core/src/util/: ClickDetectorFFT.cpp  ClickDetectorFFT.h  CommandFifo.h  CpuMeter.h  DenormalGuard.h  LockFreeFloatFifo.h  ObservabilityCounters.h  RtAssertNoAlloc.cpp  RtAssertNoAlloc.h  SpscRing.h  TraceRing.h  XrunCounter.h
core/tests/core_unit/: CMakeLists.txt  adm_osc_v1_compliance.csv  bench_cpumeter_record_latency.cpp  test_a3_input_routing.cpp  test_ambi_decoder_type_runtime_apply.cpp  test_ambi_decoder_type_swap_concurrent.cpp  test_b1_b2_mode_transition_disable_reenable.cpp  test_b1_b2_mode_transition_probe_clamped.cpp  test_b1_b2_mode_transition_smooth.cpp  test_b2_ambivs_equivalent_to_b1_at_order3.cpp  test_b2_layout_change_does_not_reinit_vs.cpp  test_b2_ownership_lifecycle.cpp  test_b2_runtime_underrun_auto_demote.cpp  test_b2_runtime_underrun_engine_integration.cpp  test_b2_runtime_underrun_user_reset.cpp  test_b2_runtime_underrun_user_reset_concurrent.cpp  test_b2_throughput_probe_fallback.cpp  test_binaural_b1_64_objects_rt_safe.cpp  test_binaural_b1_one_object.cpp  test_binaural_b1_two_objects_linear.cpp  test_binaural_probe_warning_emission.cpp  test_channel_map_duplicate_rejects.cpp  test_convergence_adm_az_golden.cpp  test_convergence_binaural_delay.cpp  test_convergence_binaural_eq.cpp  test_convergence_binaural_prefeed.cpp  test_convergence_coords.cpp  test_convergence_dbap_no_alloc.cpp  test_convergence_decorrelation.cpp  test_convergence_denormal_guard.cpp  test_convergence_head_rotate.cpp  (+129 more)
ui/: pyproject.toml
ui/spatial_engine_ui/: __init__.py  app.py
ui/tests/: test_adm_osc_protocol.py  test_drag_coalescer.py  test_elevation_ui.py  test_elevation_view.py  test_matrix_view_sync.py  test_midi_bridge.py  test_object_panels_dsp.py  test_p0_smoke.py  test_protocol_version.py  test_scene_panel.py  test_trajectory.py  test_transport_panel.py
ui/webgui/: __init__.py  osc_bridge.py  server.py  trajectory.py
vst3/: AudioCommand.h  CMakeLists.txt  SpatialEngineController.cpp  SpatialEngineController.hpp  SpatialEnginePluginFactory.cpp  SpatialEnginePluginUdp.cpp  SpatialEnginePluginUdp.h  SpatialEngineProcessData.hpp  SpatialEngineProcessor.cpp  SpatialEngineProcessor.hpp  SpatialEngineVST3.cpp  SpscRing.h
vst3/osc/: PluginInstanceRegistry.cpp  PluginInstanceRegistry.h  RegistryPath.h
vst3/tests/: CMakeLists.txt  rt_alloc_probe.hpp  smoke_matrix.md  soak_vst3_console_flood.cpp  test_p_instances_registry.cpp  test_p_instances_registry_corruption.cpp  test_state_v3_loads_byte_identical_under_v4_writer.cpp  test_v04_binaural_bus_placeholder.cpp  test_vst3_audio_smoke.cpp  test_vst3_bind_collision.cpp  test_vst3_bus_arrangement_speaker_binaural.cpp  test_vst3_bypass.cpp  test_vst3_dispatch_rt_safety.cpp  test_vst3_e2e_console_to_plugin.cpp  test_vst3_heartbeat_shutdown_fast.cpp  test_vst3_host_fixture.cpp  test_vst3_intra_plugin_spsc_drain.cpp  test_vst3_no_feedback_loop.cpp  test_vst3_param_layout.cpp  test_vst3_param_roundtrip.cpp  test_vst3_performedit_threadsafe.cpp  test_vst3_reverse_path.cpp  test_vst3_setup_processing_applies_layout.cpp  test_vst3_spsc_ring_overrun.cpp  test_vst3_state_persist.cpp  test_vst3_state_persists_layout_path.cpp  test_vst3_state_persists_sofa_path.cpp  test_vst3_state_v3_back_compat.cpp  test_vst3_state_v3_persist.cpp  test_vst3_state_v3_reader_only.cpp  test_vst3_state_v4_binaural_section.cpp  test_vst3_state_v4_persist.cpp  test_writebinaural_no_sofa_muted.cpp
(+328 files in other folders)
