[project]
name = "spatial_engine_ui"
version = "0.1.0"
description = "PySide6 UI for spatial_engine — top-down/3D speaker view, drag, matrix view, noise gen, parameter inspectors."
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "pyside6>=6.7,<6.9",
    "python-osc>=1.8,<2.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "pyright>=1.1.378",
]

[project.scripts]
spatial-engine-ui = "spatial_engine_ui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spatial_engine_ui"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["spatial_engine_ui"]
